# 3Dcam

./: 3Dcam.pro  CAM.txt  CMakeLists.txt  Page1.qml  README.md  gcodegenerator.cpp  gcodegenerator.h  main.qml
3dcamlib/: CMakeLists.txt  cgaldefs.h  gcodegenerator.cpp  gcodegenerator.h  polyhedroncuttest.cpp  polyhedroncuttest.h  stlloader.cpp  stlloader.h  toolpathgenerator.cpp  toolpathgenerator.h  triangularmeshgenerator.cpp  triangularmeshgenerator.h  undersquare.cpp  undersquare.h  vertexandindexgenerator.cpp  vertexandindexgenerator.h  verticesandfacesgenerator.cpp  verticesandfacesgenerator.h
app/: CMakeLists.txt  app.pro  applicationcontrol.cpp  applicationcontrol.h  camera3d.cpp  camera3d.h  gcodegenerator.cpp  gcodegenerator.h  main.cpp  stlrenderer.cpp  stlrenderer.h  transform3d.cpp  transform3d.h  viewer3d.cpp  viewer3d.h
qml/: Page1.qml  Page1Form.ui.qml  main.qml  qml.qrc
test/: CMakeLists.txt  cgal_test.cpp  dummy_resources.qrc  dummy_test.cpp  gcodegenerator_test.cpp  stlloader_cube_ascii_invalid.stl  stlloader_cube_binary.stl  stlloader_cube_binary_invalid_data_past_end.stl  stlloader_cube_binary_invalid_missing_last_byte.stl  stlloader_cube_binary_invalid_triangle_num.stl  stlloader_resources.qrc  stlloader_test.cpp  toolpathgenerator_resources.qrc  toolpathgenerator_test.cpp  triangularmeshgenerator_test.cpp  undersquare_test.cpp  vertexandindexgenerator_test.cpp  verticesandfacesgenerator_test.cpp
test/toolpathgenerator_test_files/: stlloader_double_cube_ascii_test.stl  stlloader_slope_ascii_test.stl  stlloader_undercut1_ascii.stl  stlloader_undercut2_ascii.stl
